--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 
 <body>
-  <h1> Hello world, my name is Liz Lee.</h1>
+  <h1> Hello world,</h1> 
+  <h2>my name is Liz Lee.</h2>
 </body>
 
 </html>
